--- a/centroid_models_exercise.ipynb
+++ b/centroid_models_exercise.ipynb
@@ -59,7 +59,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,23 +72,14 @@
     }
    },
    "source": [
-    "## Objective: Fit K-Means, find optimal number of clusters using elbow rule, and plot clusters (use function plot_clusters defined in walkthrough). Use only last two rows of dataframe (anual income, spending score)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-23T18:49:13.573334Z",
-     "start_time": "2020-04-23T18:49:13.566421Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# only last two rows from df\n",
+    "## Objective: \n",
+    "- Fit K-Means, \n",
+    "- find optimal number of clusters using elbow rule, \n",
+    "- and plot clusters.\n",
     "\n",
-    "\n"
+    "To simplify plotting in 2-D, we can create clustering model based on the last two columns of the dataset. There are ways to lower the dimension of your data so it can plotted in two dimensions and we will get to those in the beginning of next week.\n",
+    "\n",
+    "Try to fit one model before scaling, than scale the data using `sklearn` and refit the model. Are there any differences in the modeling results?"
    ]
   },
   {
@@ -122,17 +115,13 @@
     }
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* define function plot clusters from walkthrough"
+    "* define function plot_clusters"
    ]
   },
   {
@@ -145,11 +134,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -168,10 +153,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -204,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -250,5 +232,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
