--- a/density_models_exercise.ipynb
+++ b/density_models_exercise.ipynb
@@ -31,13 +31,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* generate clusters with make_blobs function \n",
+    "## Task: Generate clusters with make_blobs function \n",
+    "\n",
     "* use this settings:\n",
-    "* n_samples=150,\n",
-    "* n_features=2,\n",
-    "* centers=3,\n",
-    "* cluster_std=0.6,\n",
-    "* random_state=0"
+    "    * n_samples=150,\n",
+    "    * n_features=2,\n",
+    "    * centers=3,\n",
+    "    * cluster_std=0.6,\n",
+    "    * random_state=0"
    ]
   },
   {
@@ -60,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* plot clusters"
+    "* plot data points"
    ]
   },
   {
@@ -82,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* define function plot clusters from walkthrough"
+    "* define function plot_clusters"
    ]
   },
   {
@@ -110,7 +111,8 @@
     }
    },
    "source": [
-    "## Objective: Try to find optimal settings of 'eps' and 'min_samples' params of DBSCAN. You can iterate over multiple parameters combinations and plot the clustering results."
+    "## Objective: \n",
+    "Try to find optimal settings of `eps` and `min_samples` params of DBSCAN. You can iterate over multiple parameters combinations and plot the clustering results."
    ]
   },
   {
@@ -181,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -227,5 +229,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
