--- a/hierarchical_models_exercise.ipynb
+++ b/hierarchical_models_exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-23T18:51:13.194632Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-23T18:51:13.348834Z",
@@ -49,18 +49,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* explore dataframe"
+    "## Objective: \n",
+    "\n",
+    "- Fit Hierarchical clustering, \n",
+    "- find optimal number of clusters via dendrogram \n",
+    "- and plot clusters. \n",
+    "\n",
+    "Again, to simplify plotting in 2-D, we can create clustering model based on the last two columns of the dataset only. We shouldn't forget scaling here as well."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-23T18:51:28.392857Z",
-     "start_time": "2020-04-23T18:51:28.346199Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -68,30 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objective: Fit Hierarchical clustering, find optimal number of clusters via dendrogram and plot clusters. Use only last two rows of dataframe (anual income, spending score)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-23T18:52:43.211868Z",
-     "start_time": "2020-04-23T18:52:43.207041Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# only last two rows from df\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* define function plot_dendogram same as in walkthrough"
+    "* define function plot_dendogram"
    ]
   },
   {
@@ -104,11 +82,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -127,10 +101,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -149,16 +120,13 @@
     }
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* define function plot clusters from walkthrough"
+    "* define function plot_clusters"
    ]
   },
   {
@@ -171,10 +139,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -193,10 +158,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -229,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -275,5 +237,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
