--- a/centroid_models_exercise.ipynb
+++ b/centroid_models_exercise.ipynb
@@ -52,16 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-23T18:49:13.451001Z",
-     "start_time": "2020-04-23T18:49:13.438639Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -79,7 +72,7 @@
     "\n",
     "To simplify plotting in 2-D, we can create clustering model based on the last two columns of the dataset. There are ways to lower the dimension of your data so it can plotted in two dimensions and we will get to those in the beginning of next week.\n",
     "\n",
-    "Try to fit one model before scaling, than scale the data using `sklearn` and refit the model. Are there any differences in the modeling results?"
+    "We shouldn't forget to scale the data using some technique from sklearn, even though, it's **not a must** in the case because we take only the last two columns and they have similar scale."
    ]
   },
   {
