--- a/hierarchical_models_exercise.ipynb
+++ b/hierarchical_models_exercise.ipynb
@@ -55,7 +55,7 @@
     "- find optimal number of clusters via dendrogram \n",
     "- and plot clusters. \n",
     "\n",
-    "Again, to simplify plotting in 2-D, we can create clustering model based on the last two columns of the dataset only. We shouldn't forget scaling here as well."
+    "Again, to simplify plotting in 2-D, we can create clustering model based on the last two columns of the dataset only."
    ]
   },
   {
