--- a/density_models_exercise.ipynb
+++ b/density_models_exercise.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* combinations (hint: use 'product' function from 'intertools')"
+    "* combinations (hint: use 'product' function from 'itertools')"
    ]
   },
   {
