--- a/centroid_models_exercise.ipynb
+++ b/centroid_models_exercise.ipynb
@@ -44,20 +44,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* explore dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-19T08:33:55.508169Z",
@@ -72,24 +58,43 @@
     "\n",
     "To simplify plotting in 2-D, we can create clustering model based on the last two columns of the dataset. There are ways to lower the dimension of your data so it can plotted in two dimensions and we will get to those in the beginning of next week.\n",
     "\n",
-    "We shouldn't forget to scale the data using some technique from sklearn, even though, it's **not a must** in the case because we take only the last two columns and they have similar scale."
+    "We shouldn't forget to scale the data using some technique from sklearn, even though, it's **not a must** in this case because we take only the last two columns and they have similar scale."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- K-Means"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-23T18:49:14.289468Z",
      "start_time": "2020-04-23T18:49:13.646392Z"
     }
    },
-   "outputs": [],
    "source": [
-    "# elbow rule\n",
+    "- plot the elbow rule\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -114,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* define function plot_clusters"
+    "* define function plot_clusters (similarly to what we have done in the walkthrough)"
    ]
   },
   {
@@ -165,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -179,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
