--- a/density_models_exercise.ipynb
+++ b/density_models_exercise.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* define params space"
+    "* define params space: two lists with `eps` and `min_samples` respectively"
    ]
   },
   {
@@ -141,7 +141,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* combinations (hint: use 'product' function from 'intertools')"
+    "* Fit different DBScans with combinations from previous params space (hint: use 'product' function from 'itertools')\n",
+    "* Plot clusters for every combination"
    ]
   },
   {
@@ -154,10 +155,14 @@
     }
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -169,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
